feat: update OpenAPI schema and models with new properties for last watched functionality
- Removed `bun.lockb` file.
- Added `totalSeconds`, `episode_name`, and `network` properties to OpenAPI schema and various models (Def7, Def9, Def10, Def11, LastWatchedCreateSchemaInputType, LastWatchedCreateSchemaOutputType, LastWatchedPatchSchemaOutputType, LastWatchedSchemaOutputType).
- Updated `ShowCard` component to support progress tracking with a new `Progress` component.
- Introduced `LastWatchedSeries` component to display last watched shows with progress.
- Enhanced `WatchPage` to include new properties when adding to last watched.
- Updated `package.json` and `package-lock.json` to include `@radix-ui/react-progress` dependency.
