# lib/api/models/Def7.ts
@@ -77,6 +77,24 @@ export interface Def7 {
     atSecond: number;
     /**
      * 
+     * @type {number}
+     * @memberof Def7
+     */
+    totalSeconds: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof Def7
+     */
+    episodeName: string;
+    /**
+     * 
+     * @type {number}
+     * @memberof Def7
+     */
+    network: number;
+    /**
+     * 
      * @type {string}
      * @memberof Def7
      */
@@ -100,6 +118,9 @@ export function instanceOfDef7(value: object): value is Def7 {
     if (!('episode' in value) || value['episode'] === undefined) return false;
     if (!('tmdbId' in value) || value['tmdbId'] === undefined) return false;
     if (!('atSecond' in value) || value['atSecond'] === undefined) return false;
+    if (!('totalSeconds' in value) || value['totalSeconds'] === undefined) return false;
+    if (!('episodeName' in value) || value['episodeName'] === undefined) return false;
+    if (!('network' in value) || value['network'] === undefined) return false;
     if (!('userId' in value) || value['userId'] === undefined) return false;
     return true;
 }
@@ -122,6 +143,9 @@ export function Def7FromJSONTyped(json: any, ignoreDiscriminator: boolean): Def7
         'isWatched': json['isWatched'] == null ? undefined : json['isWatched'],
         'tmdbId': json['tmdbId'],
         'atSecond': json['atSecond'],
+        'totalSeconds': json['totalSeconds'],
+        'episodeName': json['episode_name'],
+        'network': json['network'],
         'userId': json['userId'],
         'user': json['user'] == null ? undefined : UserSchemaFromJSON(json['user']),
     };
@@ -146,6 +170,9 @@ export function Def7ToJSONTyped(value?: Def7 | null, ignoreDiscriminator: boolea
         'isWatched': value['isWatched'],
         'tmdbId': value['tmdbId'],
         'atSecond': value['atSecond'],
+        'totalSeconds': value['totalSeconds'],
+        'episode_name': value['episodeName'],
+        'network': value['network'],
         'userId': value['userId'],
         'user': UserSchemaToJSON(value['user']),
     };
