# lib/api/models/LastWatchedCreateSchemaInputType.ts
@@ -61,6 +61,24 @@ export interface LastWatchedCreateSchemaInputType {
      * @memberof LastWatchedCreateSchemaInputType
      */
     atSecond: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof LastWatchedCreateSchemaInputType
+     */
+    totalSeconds: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof LastWatchedCreateSchemaInputType
+     */
+    episodeName: string;
+    /**
+     * 
+     * @type {number}
+     * @memberof LastWatchedCreateSchemaInputType
+     */
+    network: number;
 }
 
 /**
@@ -73,6 +91,9 @@ export function instanceOfLastWatchedCreateSchemaInputType(value: object): value
     if (!('season' in value) || value['season'] === undefined) return false;
     if (!('episode' in value) || value['episode'] === undefined) return false;
     if (!('atSecond' in value) || value['atSecond'] === undefined) return false;
+    if (!('totalSeconds' in value) || value['totalSeconds'] === undefined) return false;
+    if (!('episodeName' in value) || value['episodeName'] === undefined) return false;
+    if (!('network' in value) || value['network'] === undefined) return false;
     return true;
 }
 
@@ -93,6 +114,9 @@ export function LastWatchedCreateSchemaInputTypeFromJSONTyped(json: any, ignoreD
         'episode': json['episode'],
         'isWatched': json['isWatched'] == null ? undefined : json['isWatched'],
         'atSecond': json['atSecond'],
+        'totalSeconds': json['totalSeconds'],
+        'episodeName': json['episode_name'],
+        'network': json['network'],
     };
 }
 
@@ -114,6 +138,9 @@ export function LastWatchedCreateSchemaInputTypeToJSONTyped(value?: LastWatchedC
         'episode': value['episode'],
         'isWatched': value['isWatched'],
         'atSecond': value['atSecond'],
+        'totalSeconds': value['totalSeconds'],
+        'episode_name': value['episodeName'],
+        'network': value['network'],
     };
 }
 
